--- a/MyFriendsApp-SPA/src/app/Groups/group/group.component.css
+++ b/MyFriendsApp-SPA/src/app/Groups/group/group.component.css
@@ -1,4 +1,4 @@
- /* The side navigation menu */
+The side navigation menu
  .sidebar {
   margin: 0;
   padding: 0;
@@ -59,3 +59,4 @@ div.content {
   flex-direction: column;
   align-items: stretch;
 }
+
